--- a/ComLib/MaximDl.csproj
+++ b/ComLib/MaximDl.csproj
@@ -5,4 +5,9 @@
     <TargetFramework>netcoreapp3.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Glob.cs" Version="4.0.166" />
+    <PackageReference Include="System.Collections.Immutable" Version="1.6.0" />
+  </ItemGroup>
+
 </Project>
