Fancy progress bar

--- a/ComLib/MaxImDL-Interop.csproj
+++ b/ComLib/MaxImDL-Interop.csproj
@@ -6,13 +6,14 @@
     <AssemblyName>dipol-calib</AssemblyName>
     <PublishTrimmed>true</PublishTrimmed>
     <PublishSingleFile>true</PublishSingleFile>
-    <VersionPrefix>0.1.0</VersionPrefix>
+    <VersionPrefix>0.1.3</VersionPrefix>
     <RuntimeIdentifier>win-x64</RuntimeIdentifier>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="CommandLineParser" Version="2.6.0" />
     <PackageReference Include="Glob.cs" Version="4.0.166" />
+    <PackageReference Include="ShellProgressBar" Version="4.3.0" />
     <PackageReference Include="System.Collections.Immutable" Version="1.6.0" />
   </ItemGroup>
 
