--- a/ComLib/MaxImDL-Interop.csproj
+++ b/ComLib/MaxImDL-Interop.csproj
@@ -1,13 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.0</TargetFramework>
-    <AssemblyName>dipol-calib</AssemblyName>
-    <PublishTrimmed>true</PublishTrimmed>
-    <PublishSingleFile>true</PublishSingleFile>
-    <VersionPrefix>0.1.3</VersionPrefix>
-    <RuntimeIdentifier>win-x64</RuntimeIdentifier>
+    <AssemblyName>maximdl-interop</AssemblyName>
+    <VersionPrefix>0.2.0</VersionPrefix>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
