Changed the name of the output assembly

--- a/Calibrator/Calibrator.csproj
+++ b/Calibrator/Calibrator.csproj
@@ -7,6 +7,7 @@
     <Nullable>enable</Nullable>
     <ApplicationIcon />
     <StartupObject />
+    <AssemblyName>dipol-calibrate</AssemblyName>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="CommandLineParser" Version="2.6.0" />
