--- a/Playground/Playground.csproj
+++ b/Playground/Playground.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CommandLineParser" Version="2.6.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\ComLib\MaxImDL-Interop.csproj" />
   </ItemGroup>
 
