--- a/Playground/Playground.csproj
+++ b/Playground/Playground.csproj
@@ -4,7 +4,8 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.0</TargetFramework>
     <Nullable>enable</Nullable>
-    <Version>0.2.0</Version>
+    <Version>0.2.1</Version>
+    <AssemblyName>dipol-measure</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
